--- a/Projeto/css/orlando.css
+++ b/Projeto/css/orlando.css
@@ -1,3 +1,9 @@
+@font-face {
+
+	font-family: 'Open-Sans';
+	src: url("../fonts/OpenSans-Regular.ttf");
+}
+
 header {
 
 	width: 100%;
@@ -10,6 +16,129 @@ header .container {
 	position: relative;
 }
 
+header .header-black li {
+
+	background-image: url("../img/clubs.png");
+	background-repeat: no-repeat;
+	display: inline-block;
+	margin: 4px;
+}
+
+header .header-black li a {
+
+	width: 32px;
+	height: 32px;
+	display: block;
+	
+}
+
+header .header-black li.club-01{
+	background-position: 0px 0px;
+}
+header .header-black li.club-02{
+	background-position: -48px 0px;
+}
+header .header-black li.club-03{
+	background-position: -95px 0px;
+}
+header .header-black li.club-04{
+	background-position: -140px 0px;
+}
+header .header-black li.club-05{
+	background-position: -189px 0px;
+}
+header .header-black li.club-06{
+	background-position: -240px 0px;
+}
+header .header-black li.club-07{
+	background-position: -288px 0px;
+}
+header .header-black li.club-08{
+	background-position: -334px 0px;
+}
+header .header-black li.club-09{
+	background-position: -380px 0px;
+}
+header .header-black li.club-10{
+	background-position: -429px 0px;
+}
+header .header-black li.club-11{
+	background-position: -480px 0px;
+}
+header .header-black li.club-12{
+	background-position: -528px 0px;
+}
+header .header-black li.club-13{
+	background-position: -577px 0px;
+}
+header .header-black li.club-14{
+	background-position: -628px 0px;
+}
+header .header-black li.club-15{
+	background-position: -674px 0px;
+}
+header .header-black li.club-16{
+	background-position: -720px 0px;
+}
+header .header-black li.club-17{
+	background-position: -763px 0px;
+}
+header .header-black li.club-18{
+	background-position: -808px 0px;
+}
+header .header-black li.club-19{
+	background-position: -856px 0px;
+}
+header .header-black li.club-20{
+	background-position: -902px 0px;
+}
+header .header-black li.club-21{
+	background-position: -951px 0px;
+}
+header .header-black li.club-22{
+	background-position: -1000px 0px;
+
+}
+
+#menu {
+
+	margin: 26px 0px;
+}
+
+#menu li{
+
+	display: inline-block;
+	font-family: 'Open-Sans';
+}
+
+#menu li.search{
+
+	width: 182px;
+
+}
+
+#menu li.search input{
+
+	background-color: #5C2D90;
+	color: #FFF;
+	border:none;
+	height: 30px;
+	line-height: 30px;
+
+}
+
+#menu li.search input::-webkit-input-placeholder {
+
+	color: #FFF;
+}
+
+#menu li a {
+
+	color: #FFF;
+	font-size: 16px;
+	padding: 10px 25px;
+}
+
 header .header-black {
 
 	background: #000;
@@ -17,6 +146,6 @@ header .header-black {
 }
 
 header #logotipo {
-	top:-20px;
+	top:20px;
 	position: absolute;
 }
