--- a/Projeto/css/orlando.css
+++ b/Projeto/css/orlando.css
@@ -1,15 +1,20 @@
 @font-face {
-
 	font-family: 'Open-Sans';
 	src: url("../fonts/OpenSans-Regular.ttf");
+}
+@font-face {
+
+	font-family: 'Open-Sans-Light';
+	src: url("../fonts/OpenSans-Light.ttf");
 }
 
 header {
 
 	width: 100%;
 	height:	150px;
-	background: #5E299A;
-
+	background: rgba(94,41,154,0.8);
+	z-index: 2;
+	position: relative;
 }
 
 header .container {
@@ -130,7 +135,7 @@ header .header-black li.club-22{
 #menu li.search div {
 
 	display: inline-block;
-	
+
 }
 
 #menu li.search button {
@@ -168,4 +173,30 @@ header .header-black {
 header #logotipo {
 	top:20px;
 	position: absolute;
+}
+
+#banner {
+	width: 100%;
+	height: 728px;
+	position:relative;
+	background: url("../img/banner.jpg") no-repeat;
+	background-position: 0px -100px;
+	top: -130px;
+}
+
+#banner h1 {
+	color:#FFF;
+	top: 300px;
+	font-size: 92px;
+	position: relative;
+	text-shadow: 2px 2px 2px rgba(0,0,0,0.45);
+	font-family: 'Open-Sans-Light';
+	margin-left: 50px;
+}
+
+#banner h1 small {
+	font-size: 32px;
+	display:block;
+	color:#FFF;
+	font-family: 'Open-Sans';
 }
