Fim de jQuery. Inicio Design Responsivo - 14/02/2017

--- a/Projeto/css/orlando.css
+++ b/Projeto/css/orlando.css
@@ -282,13 +282,14 @@ footer {
 }
 footer .row {
 	width: 100%;
+	margin-left: 0;
 }
 footer .row p {
 	line-height: 55px;
 	margin-bottom: 0;
 }
 footer .row-cinza-claro {
-	height: 200px;
+	height: 240px;
 	background-color: #171F26;
 }
 footer .row-cinza-escuro {
@@ -388,4 +389,11 @@ footer .list-socials i {
 }
 video {
 	width: 60%;
+}
+#btn-bars, #btn-search,
+#btn-news-prev, #btn-news-next {
+	display: none;
+}
+.page-up {
+	display: none!important;
 }
